--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerceproject",
+  "name": "ecommerce_shoe_project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
